refactor: update repository methods for fetching response statistics by evaluation